javadocs updated, some minor api improvements